--- a/approje/Views/Home/my-profile.cshtml
+++ b/approje/Views/Home/my-profile.cshtml
@@ -153,14 +153,8 @@
                                 </li>
                                 <li>
                                     <a href="#">
-                                        <span class="item-number">8591</span> 
-                                        <span class="item-text">Following</span>
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="#">
-                                        <span class="item-number">784514</span> 
-                                        <span class="item-text">Followers</span>
+                                        <span class="item-number">@user.FriendCount</span> 
+                                        <span class="item-text">Friends</span>
                                     </a>
                                 </li>
                             </ul>
