--- a/approje/Views/Shared/_Layout.cshtml
+++ b/approje/Views/Shared/_Layout.cshtml
@@ -184,7 +184,7 @@
                                             </div>
                                             <div class="item d-flex justify-content-between align-items-center">
                                                 <div class="figure">
-                                                    <a href="#"><img src="~/assets/images/user/user-1.jpg" class="rounded-circle" alt="image"></a>
+                                                    <a href="#"><img src="@user.UserImagelink" class="rounded-circle" alt="image"></a>
                                                 </div>
                                                 <div class="text">
                                                     <h4><a href="#">James Vanwin</a></h4>
@@ -333,7 +333,7 @@
                                 <div class="dropdown profile-nav-item">
                                     <a href="#" class="dropdown-bs-toggle" role="button" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                         <div class="menu-profile">
-                                            <img src="~/assets/images/user/user-1.jpg" class="rounded-circle" alt="image">
+                                            <img src="@user.UserImagelink" class="rounded-circle" alt="image">
                                             <span class="name"></span>
                                             <span class="status-online"></span>
                                         </div>
@@ -608,7 +608,7 @@
                                     <div class="dropdown profile-nav-item">
                                         <a href="#" class="dropdown-bs-toggle" role="button" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                             <div class="menu-profile">
-                                                <img src="~/assets/images/user/user-1.jpg" class="rounded-circle" alt="image">
+                                                <img src="@user.UserImagelink" class="rounded-circle" alt="image">
                                                 <span class="name">Nihad1</span>
                                                 <span class="status-online"></span>
                                             </div>
@@ -1169,7 +1169,7 @@
                                     <div class="dropdown profile-nav-item">
                                         <a href="#" class="dropdown-bs-toggle" role="button" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                             <div class="menu-profile">
-                                                <img src="~/assets/images/user/user-1.jpg" class="rounded-circle" alt="image">
+                                            <img src="@user.UserImagelink" class="rounded-circle" alt="image">
                                                 <span class="name">@user.Name</span>
                                                 <span class="status-online"></span>
                                             </div>
