--- a/approje/Views/Home/Index.cshtml
+++ b/approje/Views/Home/Index.cshtml
@@ -113,7 +113,7 @@
                     <aside class="widget-area">
                         <div class="widget widget-view-profile">
                             <div class="profile-box d-flex justify-content-between align-items-center">
-                                <a href="/home/my-profile"><img src="~/assets/images/user/user-1.jpg" alt="image"></a>
+                            <a href="/home/my-profile"><img src="@user.UserImagelink" alt="image"></a>
                                 <div class="text ms-2">
                                     <h3><a href="/home/my-profile">@user.Name</a></h3>
                                     <span>Washington</span>
@@ -347,7 +347,7 @@
                                     <div class="stories-item">
                                         <div class="stories-image">
                                             <a href="#">
-                                                <img src="~/assets/images/user/user-1.jpg" alt="image">
+                                            <img src="@user.UserImagelink" alt="image">
                                             </a>
                                             <div class="add-icon">
                                                 <a href="#"><i class="flaticon-add"></i></a>
@@ -513,7 +513,7 @@
                                 </div>
                                 <form class="post-footer">
                                     <div class="footer-image">
-                                        <a href="#"><img src="~/assets/images/user/user-1.jpg" class="rounded-circle" alt="image"></a>
+                                    <a href="#"><img src="@user.UserImagelink" class="rounded-circle" alt="image"></a>
                                     </div>
                                     <div class="form-group">
                                         <textarea name="message" class="form-control" placeholder="Write a comment..."></textarea>
