--- a/approje/Views/Home/my-profile.cshtml
+++ b/approje/Views/Home/my-profile.cshtml
@@ -16,7 +16,7 @@
         <!-- End Preloader Area -->
         
         <!-- Start Main Content Wrapper Area -->
-        <div class="main-content-wrapper d-flex flex-column">
+        <div class="main-content d-flex flex-column">
 
             <!-- Start Navbar Area -->
            
@@ -121,6 +121,31 @@
             <!-- End Sidemenu Area -->
             
             <!-- Start Content Page Box Area -->
+
+              <style>
+                .container_Imagesave {
+                 display: flex;
+                 flex-direction:column;
+                 align-items: start;
+                }
+
+                .container_section{
+                    margin: 5px;
+                    display: none;
+                    padding: 5px;
+                }
+
+                .container_Imagesavebutton {
+                     padding: 5px 10px;
+                     margin:5px;
+                     background-color: #337ab7;
+                     color: #fff;
+                     border: none;
+                     cursor: pointer;
+                }
+              </style>
+
+
             <div class="content-page-box-area">
                 <div class="my-profile-inner-box">
                     <div class="profile-cover-image">
@@ -134,20 +159,28 @@
                         <div class="inner-info-box d-flex justify-content-between align-items-center">
                             <div class="info-image">
                                 <a href="#">
-                                    <img src="~/assets/images/my-profile.jpg" alt="image">
+                                    <img style="max-width:275px; max-height:275px; min-width:100px; min-height:100px; " src="@user.UserImagelink" alt="image">
                                 </a>
                                 <div class="icon">
                                     <a href="#"><i class="flaticon-photo-camera"></i></a>
                                 </div>
+                                 <div class="container_Imagesave">
+                                     <div class="input-group m-2 container_section">
+                                <input id="container_Imagesavetextbox" type="text" class="form-control" placeholder="New Image Link !" aria-label="New Image Link !" aria-describedby="button-addon2">
+                                        <button class="btn btn-outline-success" type="button" onclick="SaveUserImage()" id="button-addon2">Save</button>
+                                     </div>
+                                     <button id="Edit_Profile_Imagebtn" onclick="EditProfileImage()" type="button" class="btn btn-outline-info container_Imagesavebutton">EDIT</button>
+
+                                 </div>
                             </div>
                             <div class="info-text ms-3">
                                 <h3><a href="#">@user.Name</a></h3>
-                                <span><a href="mailto:matthew@gmail.com">@user.Email</a></span>
+                                <span><a>@user.Email</a></span>
                             </div>
                             <ul class="statistics">
                                 <li>
                                     <a href="#">
-                                        <span class="item-number">59862</span> 
+                                        <span class="item-number">0</span> 
                                         <span class="item-text">Likes</span>
                                     </a>
                                 </li>
@@ -3428,3 +3461,5 @@
         <div class="go-top">
             <i class="ri-arrow-up-line"></i>
         </div>
+
+        <script src="~/MyJs/myprofile.js"></script>
