--- a/approje/Views/Home/userProfile.cshtml
+++ b/approje/Views/Home/userProfile.cshtml
@@ -30,7 +30,7 @@
                 <div class="inner-info-box d-flex justify-content-between align-items-center">
                     <div class="info-image">
                         <a href="#">
-                            <img src="@Model.Imageurl" alt="image">
+                            <img style="max-width:275px; max-height:275px; min-width:100px; min-height:100px; " src="@Model.Imageurl" alt="image">
                         </a>
                         <div class="icon">
                             <a href="#"><i class="flaticon-photo-camera"></i></a>
