--- a/approje/Views/Home/userProfile.cshtml
+++ b/approje/Views/Home/userProfile.cshtml
@@ -81,7 +81,7 @@
                         @if (Model.IsFriend)
                         {
                             <div class="btn-group" role="group" aria-label="Basic mixed styles example">
-                                <button type="button" class="btn btn-success">Friend</button>
+                                <button type="button" class="btn btn-primary">Send Message</button>
                                 <button type="button" class="btn btn-danger" onclick="deletefriend(id)" id="@Model.Id">UnFollow</button>
                             </div>
                         }
