--- a/approje/Views/Home/live-chat.cshtml
+++ b/approje/Views/Home/live-chat.cshtml
@@ -1,4 +1,5 @@
-﻿
+﻿@using approje.Dtos;
+@model List<ChatUserDto>;
     <!-- Start Preloader Area -->
     <div class="preloader-area">
         <div class="spinner">
@@ -11,107 +12,8 @@
     </div>
     <!-- End Preloader Area -->
     <!-- Start Main Content Wrapper Area -->
-    <div class="main-content-wrapper d-flex flex-column">
+    <div class="main-content d-flex flex-column">
 
-       
-        <!-- Start Sidemenu Area -->
-        <div class="sidemenu-area">
-            <div class="responsive-burger-menu d-lg-none d-block">
-                <span class="top-bar"></span>
-                <span class="middle-bar"></span>
-                <span class="bottom-bar"></span>
-            </div>
-
-            <div class="sidemenu-body">
-                <ul class="sidemenu-nav metisMenu h-100" id="sidemenu-nav" data-simplebar>
-                    <li class="nav-item">
-                        <a href="/home/index" class="nav-link">
-                            <span class="icon"><i class="flaticon-newspaper"></i></span>
-                            <span class="menu-title">News Feed</span>
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="/home/notifications" class="nav-link">
-                            <span class="icon"><i class="flaticon-bell"></i></span>
-                            <span class="menu-title">Notifications</span>
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="/home/messages" class="nav-link">
-                            <span class="icon"><i class="flaticon-comment-1"></i></span>
-                            <span class="menu-title">Messages</span>
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="/home/friends" class="nav-link">
-                            <span class="icon"><i class="flaticon-friends"></i></span>
-                            <span class="menu-title">Friends</span>
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="/home/groups" class="nav-link">
-                            <span class="icon"><i class="flaticon-team"></i></span>
-                            <span class="menu-title">Groups</span>
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="/home/favorite" class="nav-link">
-                            <span class="icon"><i class="flaticon-star"></i></span>
-                            <span class="menu-title">Favorite</span>
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="/home/events" class="nav-link">
-                            <span class="icon"><i class="flaticon-calendar"></i></span>
-                            <span class="menu-title">Events</span>
-                        </a>
-                    </li>
-                    <li class="nav-item active">
-                        <a href="/home/live-chat" class="nav-link">
-                            <span class="icon"><i class="flaticon-live-chat"></i></span>
-                            <span class="menu-title">Live Chat</span>
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="/home/birthday" class="nav-link">
-                            <span class="icon"><i class="flaticon-cake"></i></span>
-                            <span class="menu-title">Birthday</span>
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="/home/video" class="nav-link">
-                            <span class="icon"><i class="flaticon-video"></i></span>
-                            <span class="menu-title">Video</span>
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="/home/weather" class="nav-link">
-                            <span class="icon"><i class="flaticon-cloudy"></i></span>
-                            <span class="menu-title">Weather</span>
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="/home/marketplace" class="nav-link">
-                            <span class="icon"><i class="flaticon-online-shopping"></i></span>
-                            <span class="menu-title">Marketplace</span>
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="/home/login" class="nav-link">
-                            <span class="icon"><i class="flaticon-user"></i></span>
-                            <span class="menu-title">Login</span>
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="/home/register" class="nav-link">
-                            <span class="icon"><i class="flaticon-information"></i></span>
-                            <span class="menu-title">Register</span>
-                        </a>
-                    </li>
-                </ul>
-            </div>
-        </div>
-        <!-- End Sidemenu Area -->
         <!-- Start Content Page Box Area -->
         <div class="content-page-box-area">
             <div class="page-banner-box bg-8">
@@ -119,87 +21,19 @@
             </div>
 
             <div class="live-chat-slides owl-carousel owl-theme">
-                <div class="chat-box">
-                    <div class="image">
-                        <a href="#"><img src="~/assets/images/user/user-11.jpg" class="rounded-circle" alt="image"></a>
-                        <span class="status-online"></span>
+                @foreach (var item in Model)
+                {
+                    <div class="chat-box" id="@item.Id">
+                        <div class="image">
+                            <a href="#"><img style="height:110px; width:115px;" src="@item.User_img" class="rounded-circle" alt="image"></a>
+                            <span class="status-online"></span>
+                        </div>
+                        <h3>
+                            <a href="#">@item.Name</a>
+                        </h3>
                     </div>
-                    <h3>
-                        <a href="#">James</a>
-                    </h3>
-                </div>
-                <div class="chat-box">
-                    <div class="image">
-                        <a href="#"><img src="~/assets/images/user/user-59.jpg" class="rounded-circle" alt="image"></a>
-                        <span class="status-online"></span>
-                    </div>
-                    <h3>
-                        <a href="#">Debra</a>
-                    </h3>
-                </div>
-                <div class="chat-box">
-                    <div class="image">
-                        <a href="#"><img src="~/assets/images/user/user-60.jpg" class="rounded-circle" alt="image"></a>
-                        <span class="status-online"></span>
-                    </div>
-                    <h3>
-                        <a href="#">Adelina</a>
-                    </h3>
-                </div>
-                <div class="chat-box">
-                    <div class="image">
-                        <a href="#"><img src="~/assets/images/user/user-23.jpg" class="rounded-circle" alt="image"></a>
-                        <span class="status-online"></span>
-                    </div>
-                    <h3>
-                        <a href="#">Miguel</a>
-                    </h3>
-                </div>
-                <div class="chat-box">
-                    <div class="image">
-                        <a href="#"><img src="~/assets/images/user/user-35.jpg" class="rounded-circle" alt="image"></a>
-                        <span class="status-online"></span>
-                    </div>
-                    <h3>
-                        <a href="#">Xavier</a>
-                    </h3>
-                </div>
-                <div class="chat-box">
-                    <div class="image">
-                        <a href="#"><img src="~/assets/images/user/user-22.jpg" class="rounded-circle" alt="image"></a>
-                        <span class="status-online"></span>
-                    </div>
-                    <h3>
-                        <a href="#">Kimberly</a>
-                    </h3>
-                </div>
-                <div class="chat-box">
-                    <div class="image">
-                        <a href="#"><img src="~/assets/images/user/user-25.jpg" class="rounded-circle" alt="image"></a>
-                        <span class="status-online"></span>
-                    </div>
-                    <h3>
-                        <a href="#">Turner</a>
-                    </h3>
-                </div>
-                <div class="chat-box">
-                    <div class="image">
-                        <a href="#"><img src="~/assets/images/user/user-39.jpg" class="rounded-circle" alt="image"></a>
-                        <span class="status-online"></span>
-                    </div>
-                    <h3>
-                        <a href="#">Ferrier</a>
-                    </h3>
-                </div>
-                <div class="chat-box">
-                    <div class="image">
-                        <a href="#"><img src="~/assets/images/user/user-33.jpg" class="rounded-circle" alt="image"></a>
-                        <span class="status-online"></span>
-                    </div>
-                    <h3>
-                        <a href="#">Reggie</a>
-                    </h3>
-                </div>
+                }
+
             </div>
 
             <div class="live-chat-body">
