--- a/approje/Views/Home/live-chat.cshtml
+++ b/approje/Views/Home/live-chat.cshtml
@@ -1,4 +1,10 @@
 ﻿@using approje.Dtos;
+@{
+    ViewData["Title"] = "live-chat";
+    ViewData["Scripts"] = "~/MyJs/live_chat.js";
+    var MessageUser = ViewBag.live_chat_message_user as ChatUserDto;
+    var Me = ViewBag.me as ChatUserDto;
+}
 @model List<ChatUserDto>;
     <!-- Start Preloader Area -->
     <div class="preloader-area">
@@ -20,182 +26,99 @@
                 <h3>Live Chat</h3>
             </div>
 
-            <div class="live-chat-slides owl-carousel owl-theme">
+            <div id="live_chat_online_users" class="live-chat-slides owl-carousel owl-theme">
                 @foreach (var item in Model)
                 {
-                    <div class="chat-box" id="@item.Id">
+                    <div class="chat-box" id="@item.Id" onclick="LiveMessageUser(id)">
                         <div class="image">
-                            <a href="#"><img style="height:110px; width:115px;" src="@item.User_img" class="rounded-circle" alt="image"></a>
+                            <a href="#"><img style="height:85px; width:85px;" src="@item.User_img" class="rounded-circle" alt="image"></a>
                             <span class="status-online"></span>
                         </div>
                         <h3>
                             <a href="#">@item.Name</a>
                         </h3>
                     </div>
+
                 }
 
             </div>
+                <div class="live-chat-body">
+                  @if (MessageUser != null)
+                  {
+                    <div class="live-chat-header d-flex justify-content-between align-items-center">
+                        <div class="live-chat-info">
+                            <a href="#"><img style="height:50px; width:50px;" src="@MessageUser.User_img" class="rounded-circle" alt="image"></a>
+                            <h3>
+                                <a href="#">@MessageUser.Name</a>
+                            </h3>
+                        </div>
 
-            <div class="live-chat-body">
-                <div class="live-chat-header d-flex justify-content-between align-items-center">
-                    <div class="live-chat-info">
-                        <a href="#"><img src="~/assets/images/user/user-11.jpg" class="rounded-circle" alt="image"></a>
-                        <h3>
-                            <a href="#">James Vanwin</a>
-                        </h3>
+                        <ul class="live-chat-right">
+                            <li>
+                                <button class="btn d-inline-block" data-bs-toggle="tooltip" data-bs-placement="top" title="Phone" type="button"><i class="ri-phone-fill"></i></button>
+                            </li>
+                            <li>
+                                <button class="btn d-inline-block" data-bs-toggle="tooltip" data-bs-placement="top" title="Live" type="button"><i class="ri-live-fill"></i></button>
+                            </li>
+                            <li>
+                                <button class="btn d-inline-block" data-bs-toggle="tooltip" data-bs-placement="top" title="Delete" type="button"><i class="ri-delete-bin-line"></i></button>
+                            </li>
+                        </ul>
                     </div>
 
-                    <ul class="live-chat-right">
-                        <li>
-                            <button class="btn d-inline-block" data-bs-toggle="tooltip" data-bs-placement="top" title="Phone" type="button"><i class="ri-phone-fill"></i></button>
-                        </li>
-                        <li>
-                            <button class="btn d-inline-block" data-bs-toggle="tooltip" data-bs-placement="top" title="Live" type="button"><i class="ri-live-fill"></i></button>
-                        </li>
-                        <li>
-                            <button class="btn d-inline-block" data-bs-toggle="tooltip" data-bs-placement="top" title="Delete" type="button"><i class="ri-delete-bin-line"></i></button>
-                        </li>
-                    </ul>
-                </div>
+                    <div class="live-chat-container">
+                        <div class="chat-content">
+                            <div class="chat">
+                                <div class="chat-avatar">
+                                    <a routerLink="/profile" class="d-inline-block">
+                                        <img src="~/assets/images/user/user-11.jpg" width="50" height="50" class="rounded-circle" alt="image">
+                                    </a>
+                                </div>
 
-                <div class="live-chat-container">
-                    <div class="chat-content">
-                        <div class="chat">
-                            <div class="chat-avatar">
-                                <a routerLink="/profile" class="d-inline-block">
-                                    <img src="~/assets/images/user/user-11.jpg" width="50" height="50" class="rounded-circle" alt="image">
-                                </a>
-                            </div>
-
-                            <div class="chat-body">
-                                <div class="chat-message">
-                                    <p>Hello, dear I want talk to you?</p>
-                                    <span class="time d-block">7:45 AM</span>
+                                <div class="chat-body">
+                                    <div class="chat-message">
+                                        <p>Hello, dear I want talk to you?</p>
+                                        <span class="time d-block">7:45 AM</span>
+                                    </div>
                                 </div>
                             </div>
+
+                            <div class="chat chat-left">
+                                <div class="chat-avatar">
+                                    <a routerLink="/profile" class="d-inline-block">
+                                       <img src="@MessageUser.User_img" width="50" height="50" class="rounded-circle" alt="image">
+                                    </a>
+                                </div>
+
+                                <div class="chat-body">
+                                    <div class="chat-message">
+                                        <p>Said how can I cooperate with you?</p>
+                                        <span class="time d-block">7:45 AM</span>
+                                    </div>
+                                </div>
+                            </div>
+
+                         
                         </div>
 
-                        <div class="chat chat-left">
-                            <div class="chat-avatar">
-                                <a routerLink="/profile" class="d-inline-block">
-                                    <img src="~/assets/images/user/user-2.jpg" width="50" height="50" class="rounded-circle" alt="image">
-                                </a>
-                            </div>
+                        <div class="chat-list-footer">
+                            <form class="d-flex align-items-center">
+                                <div class="btn-box d-flex align-items-center me-3">
+                                    <button class="file-attachment-btn d-inline-block me-2" data-bs-toggle="tooltip" data-bs-placement="top" title="File Attachment" type="button"><i class="ri-attachment-2"></i></button>
 
-                            <div class="chat-body">
-                                <div class="chat-message">
-                                    <p>Said how can I cooperate with you?</p>
-                                    <span class="time d-block">7:45 AM</span>
+                                    <button class="emoji-btn d-inline-block" data-bs-toggle="tooltip" data-bs-placement="top" title="Emoji" type="button"><i class="ri-user-smile-line"></i></button>
                                 </div>
-                            </div>
-                        </div>
 
-                        <div class="chat">
-                            <div class="chat-avatar">
-                                <a routerLink="/profile" class="d-inline-block">
-                                    <img src="~/assets/images/user/user-3.jpg" width="50" height="50" class="rounded-circle" alt="image">
-                                </a>
-                            </div>
+                                <input type="text" class="form-control" placeholder="Type your message...">
 
-                            <div class="chat-body">
-                                <div class="chat-message">
-                                    <p>I need some ideas from you about my design</p>
-                                    <span class="time d-block">7:45 AM</span>
-                                </div>
-                            </div>
-                        </div>
-
-                        <div class="chat chat-left">
-                            <div class="chat-avatar">
-                                <a routerLink="/profile" class="d-inline-block">
-                                    <img src="~/assets/images/user/user-4.jpg" width="50" height="50" class="rounded-circle" alt="image">
-                                </a>
-                            </div>
-
-                            <div class="chat-body">
-                                <div class="chat-message">
-                                    <p>What you want to know about design</p>
-                                    <span class="time d-block">7:45 AM</span>
-                                </div>
-                            </div>
-                        </div>
-
-                        <div class="chat">
-                            <div class="chat-avatar">
-                                <a routerLink="/profile" class="d-inline-block">
-                                    <img src="~/assets/images/user/user-5.jpg" width="50" height="50" class="rounded-circle" alt="image">
-                                </a>
-                            </div>
-
-                            <div class="chat-body">
-                                <div class="chat-message">
-                                    <p>With everything I know about design, I can help you in many ways</p>
-                                    <span class="time d-block">7:45 AM</span>
-                                </div>
-                            </div>
-                        </div>
-
-                        <div class="chat chat-left">
-                            <div class="chat-avatar">
-                                <a routerLink="/profile" class="d-inline-block">
-                                    <img src="~/assets/images/user/user-6.jpg" width="50" height="50" class="rounded-circle" alt="image">
-                                </a>
-                            </div>
-
-                            <div class="chat-body">
-                                <div class="chat-message">
-                                    <p>Ok, I'm taking note I'm telling you everything I need</p>
-                                    <span class="time d-block">7:45 AM</span>
-                                </div>
-                            </div>
-                        </div>
-
-                        <div class="chat">
-                            <div class="chat-avatar">
-                                <a routerLink="/profile" class="d-inline-block">
-                                    <img src="~/assets/images/user/user-7.jpg" width="50" height="50" class="rounded-circle" alt="image">
-                                </a>
-                            </div>
-
-                            <div class="chat-body">
-                                <div class="chat-message">
-                                    <p>I am waiting for your note</p>
-                                    <span class="time d-block">7:45 AM</span>
-                                </div>
-                            </div>
-                        </div>
-
-                        <div class="chat chat-left">
-                            <div class="chat-avatar">
-                                <a routerLink="/profile" class="d-inline-block">
-                                    <img src="~/assets/images/user/user-8.jpg" width="50" height="50" class="rounded-circle" alt="image">
-                                </a>
-                            </div>
-
-                            <div class="chat-body">
-                                <div class="chat-message">
-                                    <p>What makes you different from other learning platforms?</p>
-                                    <span class="time d-block">7:45 AM</span>
-                                </div>
-                            </div>
+                                <button type="submit" class="send-btn d-inline-block">Send</button>
+                            </form>
                         </div>
                     </div>
-
-                    <div class="chat-list-footer">
-                        <form class="d-flex align-items-center">
-                            <div class="btn-box d-flex align-items-center me-3">
-                                <button class="file-attachment-btn d-inline-block me-2" data-bs-toggle="tooltip" data-bs-placement="top" title="File Attachment" type="button"><i class="ri-attachment-2"></i></button>
-
-                                <button class="emoji-btn d-inline-block" data-bs-toggle="tooltip" data-bs-placement="top" title="Emoji" type="button"><i class="ri-user-smile-line"></i></button>
-                            </div>
-
-                            <input type="text" class="form-control" placeholder="Type your message...">
-
-                            <button type="submit" class="send-btn d-inline-block">Send</button>
-                        </form>
-                    </div>
-                </div>
-            </div>
+                }
+        </div>
+            
+            
         </div>
         <!-- End Content Page Box Area -->
         <!-- Start Right Sidebar Area -->
@@ -340,4 +263,3 @@
     <div class="go-top">
         <i class="ri-arrow-up-line"></i>
     </div>
-    <!-- End Go Top Area -->
