--- a/approje/Views/Home/live-chat.cshtml
+++ b/approje/Views/Home/live-chat.cshtml
@@ -109,10 +109,10 @@
                                     <button class="emoji-btn d-inline-block" data-bs-toggle="tooltip" data-bs-placement="top" title="Emoji" type="button"><i class="ri-user-smile-line"></i></button>
                                 </div>
 
-                                <input type="text" class="form-control" placeholder="Type your message...">
+                                <input type="text" id="content_txt_chat" class="form-control" placeholder="Type your message...">
 
-                                <button type="submit" class="send-btn d-inline-block">Send</button>
                             </form>
+                                <button onclick="ChatSendMessage(@MessageUser.Id,@Me.Id)" class="send-btn d-inline-block">Send</button>
                         </div>
                     </div>
                 }
