--- a/approje/Views/Home/live-chat.cshtml
+++ b/approje/Views/Home/live-chat.cshtml
@@ -27,7 +27,7 @@
             </div>
 
             <div id="live_chat_online_users" class="live-chat-slides owl-carousel owl-theme">
-                @foreach (var item in Model)
+@*                @foreach (var item in Model)
                 {
                     <div class="chat-box" id="@item.Id" onclick="LiveMessageUser(id)">
                         <div class="image">
@@ -39,84 +39,12 @@
                         </h3>
                     </div>
 
-                }
+                }*@
 
             </div>
-                <div class="live-chat-body">
-                  @if (MessageUser != null)
-                  {
-                    <div class="live-chat-header d-flex justify-content-between align-items-center">
-                        <div class="live-chat-info">
-                            <a href="#"><img style="height:50px; width:50px;" src="@MessageUser.User_img" class="rounded-circle" alt="image"></a>
-                            <h3>
-                                <a href="#">@MessageUser.Name</a>
-                            </h3>
-                        </div>
+            <div class="live-chat-body">
 
-                        <ul class="live-chat-right">
-                            <li>
-                                <button class="btn d-inline-block" data-bs-toggle="tooltip" data-bs-placement="top" title="Phone" type="button"><i class="ri-phone-fill"></i></button>
-                            </li>
-                            <li>
-                                <button class="btn d-inline-block" data-bs-toggle="tooltip" data-bs-placement="top" title="Live" type="button"><i class="ri-live-fill"></i></button>
-                            </li>
-                            <li>
-                                <button class="btn d-inline-block" data-bs-toggle="tooltip" data-bs-placement="top" title="Delete" type="button"><i class="ri-delete-bin-line"></i></button>
-                            </li>
-                        </ul>
-                    </div>
-
-                    <div class="live-chat-container">
-                        <div class="chat-content">
-                            <div class="chat">
-                                <div class="chat-avatar">
-                                    <a routerLink="/profile" class="d-inline-block">
-                                        <img src="~/assets/images/user/user-11.jpg" width="50" height="50" class="rounded-circle" alt="image">
-                                    </a>
-                                </div>
-
-                                <div class="chat-body">
-                                    <div class="chat-message">
-                                        <p>Hello, dear I want talk to you?</p>
-                                        <span class="time d-block">7:45 AM</span>
-                                    </div>
-                                </div>
-                            </div>
-
-                            <div class="chat chat-left">
-                                <div class="chat-avatar">
-                                    <a routerLink="/profile" class="d-inline-block">
-                                       <img src="@MessageUser.User_img" width="50" height="50" class="rounded-circle" alt="image">
-                                    </a>
-                                </div>
-
-                                <div class="chat-body">
-                                    <div class="chat-message">
-                                        <p>Said how can I cooperate with you?</p>
-                                        <span class="time d-block">7:45 AM</span>
-                                    </div>
-                                </div>
-                            </div>
-
-                         
-                        </div>
-
-                        <div class="chat-list-footer">
-                            <form class="d-flex align-items-center">
-                                <div class="btn-box d-flex align-items-center me-3">
-                                    <button class="file-attachment-btn d-inline-block me-2" data-bs-toggle="tooltip" data-bs-placement="top" title="File Attachment" type="button"><i class="ri-attachment-2"></i></button>
-
-                                    <button class="emoji-btn d-inline-block" data-bs-toggle="tooltip" data-bs-placement="top" title="Emoji" type="button"><i class="ri-user-smile-line"></i></button>
-                                </div>
-
-                                <input type="text" id="content_txt_chat" class="form-control" placeholder="Type your message...">
-
-                            </form>
-                                <button onclick="ChatSendMessage(@MessageUser.Id,@Me.Id)" class="send-btn d-inline-block">Send</button>
-                        </div>
-                    </div>
-                }
-        </div>
+            </div>
             
             
         </div>
